change api.yml to include metadata as a query parameter
